// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat/send-message/discord SendMessage when specified destination does exist performs correctly 1`] = `
Object {
  "value": ObjectContaining {
    "destination": "935962220104396885",
    "messageId": Any<String>,
    "rateLimit": ObjectContaining {
      "bucket": Any<String>,
      "remainingRequests": Any<Number>,
      "remainingRequestsPercentage": Any<Number>,
      "resetAfter": Any<Number>,
      "resetTimestamp": Any<Number>,
      "totalRequests": Any<Number>,
    },
  },
}
`;

exports[`chat/send-message/discord SendMessage when specified destination does not exist returns error 1`] = `
Object {
  "error": ObjectContaining {
    "kind": StringMatching /HTTPError/,
    "message": StringMatching /Expected HTTP error/,
    "properties": ObjectContaining {
      "rateLimit": ObjectContaining {
        "bucket": Any<String>,
        "remainingRequests": Any<Number>,
        "remainingRequestsPercentage": Any<Number>,
        "resetAfter": Any<Number>,
        "resetTimestamp": Any<Number>,
        "totalRequests": Any<Number>,
      },
      "title": "Not found",
    },
    "statusCode": Any<Number>,
  },
}
`;
